@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-20T16:29:03Z",
+  "timestamp" : "2022-06-21T01:46:59Z",
   "count_outdated" : 2166,
   "uniques_outdated" : 439,
-  "count" : 2209,
+  "count" : 2210,
   "uniques" : 465,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
+      "count": 8,
+      "count_minmax": [ 7, 8 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
     }
