@@ -1,5 +1,5 @@
 {
-  "count": 43,
+  "count": 44,
   "uniques": 11,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 7,
+      "count": 8,
       "uniques": 5
     }
   ]
