@@ -1,3 +1,10 @@
+2022-06-21T01:46:59Z:
+* notice: last 14d: unq all: 11 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 439 2166 / 465 2209
+* notice: next accum: outdated-unq outdated-all / unq all: 439 2166 / 465 2210
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +5 +8 -0 -0 / 5 8
+* notice: removed / changed dates: [] / [2022-06-20]
+
 2022-06-20T16:29:03Z:
 * notice: last 14d: unq all: 11 43
 * notice: prev accum: outdated-unq outdated-all / unq all: 437 2164 / 464 2208
